--- a/views/foretag.handlebars
+++ b/views/foretag.handlebars
@@ -1,3 +1,17 @@
-<article id="foretag">
-    <h2>Företag</h2>
-</article>
+<section id="foretag">
+    <h2>Din allt-i-ett lösning för bemanning</h2>
+    <div class="card-container">
+        <div class="feature-card">
+            <h2>Hitta</h2>
+            <!-- looking glass SVG -->
+        </div>
+        <div class="feature-card">
+            <h2>Rekrytera</h2>
+            <!-- looking glass SVG -->
+        </div>
+        <div class="feature-card">
+            <h2>Administrera</h2>
+            <!-- looking glass SVG -->
+        </div>
+    </div>
+</section>
