--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,13 @@
             <a class="hori-menu-link" href="/frilansare">Frilansare</a>
             <a class="hori-menu-link" href="/kunder">Kunder</a>
             <a class="hori-menu-link" href="/sa-fungerar-det">Så fungerar det</a>
-            <a class="hori-menu-link" href="/logga-in">Logga in</a>
+            <form action="">
+                <label for="email">E-post</label>
+                <input type="email" name="email" id="email">
+                <label for="password">Lösenord</label>
+                <input type="password" name="pass" id="pass">
+                <button id="login" type="submit">Logga in</button>
+            </form>
             <a class="hori-menu-link" href="/registrera-dig">Registrera dig</a>
 
             <a class="burger-menu-link" href="/foretag">Företag</a>
